Fix legacy home page billboard spacing [fix #10273]

--- a/media/css/mozorg/home/home.scss
+++ b/media/css/mozorg/home/home.scss
@@ -22,7 +22,11 @@ $image-path: '/media/protocol/img';
 //* -------------------------------------------------------------------------- */
 // Billboard
 .mzp-c-billboard {
-    margin-top: 0;
+    margin-top: get-theme('v-grid-xl');
+
+    @media #{$mq-md} {
+        margin-top: 0;
+    }
 }
 
 // offset image override
